Переписывание справки для всех 4 ролей. Исправление бага при обновлении страницы не первой роли

--- a/src/main/resources/static/Templates/contentAttestation.html
+++ b/src/main/resources/static/Templates/contentAttestation.html
@@ -66,6 +66,7 @@
                             <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
                                title="Приступил к работе в дистанционном формате.">
                             </i>
+                            <!-- Приступил к дистанционному обучению. Если дисциплина ведётся в дистанционном формате -->
                         </th>
                         <th class="text-center" style="min-width: 10em">Аттестован</th>
                         <th class="text-center ng-hide" ng-show="isHead">Назначенный преподаватель</th>
