--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -1,134 +1,163 @@
 <div>
-    <div class="my-5 card bg-light col-md-5 mx-auto">
+    <div class="my-5 card bg-light col-md-8 mx-auto">
         <div class="font-weight-bold h4 text-center mt-4">
             Справочные сведения
         </div>
+        <div class="h5 text-center" ng-show="ur == 'DEANERY' || ur == 'DEPUTY_DEAN' ||
+                                             ur == 'TEACHER' || ur == 'SECRETARY'">
+            (интерфейс
+            <span class="font-weight-bold" ng-show="ur == 'DEANERY'">"Деканат"</span>
+            <span class="font-weight-bold" ng-show="ur == 'DEPUTY_DEAN'">"Зам. декана"</span>
+            <span class="font-weight-bold" ng-show="ur == 'TEACHER'">"Преподаватель"</span>
+            <span class="font-weight-bold" ng-show="ur == 'SECRETARY'">"Секретарь"</span>)
+        </div>
         <hr class="mt-2">
 
-
-        <!--<div class="text-center ng-hide" ng-show="ur == 'DEANERY'">-->
-        <!--</div>-->
-
         <div class="text-center ng-hide" ng-show="ur == 'DEANERY'">
-            Для просмотра ведомостей аттестаций,<!--текущей ситуации,--><br>
-            <!--связанной с проведением аттестаций,<br>-->
-            включая те, дедлайн которых уже прошёл,<br>
+            Для назначения зав. каф. и зам. декана<br>
             перейдите в раздел
+            <a class="bold text-info" ui-sref="assignment">
+                <b>"Назначение"</b>
+            </a>
+            .<br>
+            Чтобы назначить зам. декана <b>всем группам</b><br>
+            кафедры, необходимо выбрать преподавателя<br>
+            из выпадающего списка в строке кафедры.<br>
+            <br>
+            Для просмотра аттестационных ведомостей,<br>
+            включая те, дедлайн которых уже прошёл,<br>
+            необходимо перейти в раздел
             <a class="bold text-info" ui-sref="viewAttestationsDeanery">
-                <b>"Ведомости"</b>
+                <b>"Аттестация"</b>
             </a>
             .<br>
             В данном разделе имеется возможность<br>
-            создать аттестацию. Для этого необходимо<br>
-             перейти в раздел
             <a class="bold text-info" ui-sref="arrangeCertification">
                 <b>"Добавить аттестацию"</b>
-            </a>
-            ,<br>
-            нажав на кнопку <b>"+"</b>,
-            выбрать <b title="Дедлайн">крайнюю дату</b> <br>
-            внесения изменений (преподаватель сможет<br>
-            редактировать ведомости до 01.00 по мск<br>
-            выбранного дня) и ввести <b>название аттестации</b>.<br>
+            </a>.
             <i>
-                В названии рекомендуется уточнить,<br>
+                В названии<br>
+                аттестации рекомендуется уточнять,<br>
                 в какое время года проводится аттестация<br>
-                (например, "осенняя аттестация").
+                (например, "Весенняя аттестация 2020-2021").
+                <!--В названии<br>
+                аттестации рекомендуется уточнять<br>
+                учебный год и время года, в которое<br>
+                проводится аттестация<br>
+                (например, "Весенняя аттестация 2020-2021").-->
             </i>
             <br>
-        </div>
-
-        <div class="text-center ng-hide" ng-show="ur == 'DEANERY'">
             <br>
-            Для того чтобы отметить отчисленных<br>
-            студентов, необходимо перейти в раздел<br>
-            <a class="bold text-info" ui-sref="studentsDeanery">
-                <b>"Студенты"</b>
+            Для просмотра сессионных ведомостей<br>
+            необходимо перейти в раздел
+            <a class="bold text-info" ui-sref="sessionStatementsDeanery">
+                <b>"Сессия"</b>
             </a>
-             и выбрать группу, далее в<br>
-            выведенном списке обозначить надлежащих<br>
-            студентов как отчисленных, поставив<br>
-            галочку напротив них. Для сохранения<br>
-            внесённых изменений необходимо<br>
-            нажать на кнопку <b>"Сохранить изменения"</b>.
+            и<br>
+            нажать на кнопку <b>"Просмотр ведомости"</b><br>
+            напротив выбранной дисциплины группы.<br>
+            <br>
+            Для изменения дедлайна и номера текущего<br>
+            семестра определённой группы необходимо<br>
+            перейти в раздел
+            <a class="bold text-info" ui-sref="groupsDeanery">
+                <b>"Группы"</b>
+            </a>. В данном разделе<br>
+            также имеется возможность отметить студентов,<br>
+            которые были отчислены из ВУЗа или ушли в<br>
+            академ. отпуск. Переход к содержимому группы
+            <br>
+            осуществляется нажатием на кнопку <b>"К списку<br>
+            студентов"</b> напротив выбранной группы.
+            <br>
             <br>
         </div>
 
         <div class="text-center ng-hide" ng-show="ur == 'DEPUTY_DEAN'">
-            Для просмотра ведомостей аттестаций,<!--текущей ситуации,--><br>
-            <!--связанной с проведением аттестаций,<br>-->
+            Для просмотра аттестационных ведомостей,<br>
             включая те, дедлайн которых уже прошёл,<br>
-            перейдите в раздел
+            необходимо перейти в раздел
             <a class="bold text-info" ui-sref="viewAttestationsDeputyDean">
-                <b>"Ведомости"</b>
+                <b>"Аттестация"</b>
             </a>
             .<br>
-            Для того чтобы изменить текущий семестр группы и отметить отчисленных<br>
-            студентов, необходимо перейти в раздел<br>
+            <br>
+            Для просмотра сессионных ведомостей<br>
+            необходимо перейти в раздел
+            <a class="bold text-info" ui-sref="deputyDeanSessionStatements">
+                <b>"Сессия"</b>
+            </a>
+            и<br>
+            нажать на кнопку <b>"Просмотр ведомости"</b><br>
+            напротив выбранной дисциплины группы.<br>
+            <br>
+            Для изменения дедлайна и номера текущего<br>
+            семестра определённой группы необходимо<br>
+            перейти в раздел
             <a class="bold text-info" ui-sref="groupsDeputyDean">
                 <b>"Группы"</b>
-            </a>
-             и выбрать группу, далее в<br>
-            выведенном списке обозначить надлежащих<br>
-            студентов как отчисленных, поставив<br>
-            галочку напротив них. Для сохранения<br>
-            внесённых изменений необходимо<br>
-            нажать на кнопку <b>"Сохранить изменения"</b>.
+            </a>. В данном разделе<br>
+            также имеется возможность отметить студентов,<br>
+            которые были отчислены из ВУЗа или ушли в<br>
+            академ. отпуск. Переход к содержимому группы
+            <br>
+            осуществляется нажатием на кнопку <b>"К списку<br>
+            студентов"</b> напротив выбранной группы.
+            <br>
             <br>
         </div>
 
         <div class="text-center ng-hide" ng-show="ur == 'TEACHER'">
-            Для заполнения ведомостей<br>
-            текущей аттестации, необходимо<br>
-            перейти в раздел
-            <a class="bold text-info" ui-sref="attestation">
-                <b>"Заполнение ведомостей"</b>
-            </a>
-            .<br>
-            Далее необходимо перейти на страницу<br>
-            ведомости выбранной (под)группы,<br>
-            и после внесения изменений<br>
-            нажать на кнопку <b>"Сохранить"</b>.
-            <br>
-        </div>
-
-        <div class="text-center ng-hide" ng-show="ur == 'SECRETARY'">
-            Для создания подгруппы<br>
+            Для заполнения аттестационных ведомостей<br>
             необходимо перейти в раздел
-            <a class="bold text-info" ui-sref="addSubgroup">
-                <b>"Добавить подгруппу"</b>
-            </a>
-            ,<br>
-            выбрать группу и нажать на кнопку <b>"Добавить"</b>.<br>
-            Студенты данной группы будут добавлены в <i>"Общий список"</i>.<br>
-            Для формирования <i>"Списка новой подгруппы"</i><br>
-            необходимо выбрать студентов<br>
-            и нажать на кнопку <b>"Отправить"</b>.<br>
-            Далее, если <i>"Список новой подгруппы"</i><br>
-            содержит всех необходимых студентов,<br>
-            требуется ввести <b>название</b> новой подгруппы<br>
-            и нажать на кнопку <b>"Создать"</b>.
+            <a class="bold text-info" ui-sref="attestation">
+                <b>"Аттестация"</b>
+            </a>,<br>
+            выбрать определённую аттестацию и перейти к<br>
+            редактированию ведомости выбранной группы.<br>
+            <br>
+            Для заполнения сессионных ведомостей<br>
+            перейдите в раздел
+            <a class="bold text-info" ui-sref="session">
+                <b>"Сессия"</b>
+            </a>, а затем - на<br>
+            страницу ведомости, в которую необходимо<br>
+            внести изменения, нажав на кнопку <b>"Перейти"</b><br>
+            напротив выбранной дисциплины группы.<br>
+            <i>
+                <br>
+                В описанных разделах есть возможность<br>
+                отбирать ведомости по группам.
+            </i>
             <br>
         </div>
 
         <div class="text-center ng-hide" ng-show="ur == 'SECRETARY'">
+            Для назначения преподавателей каждой группе,<br>
+            участвующей в аттестации, необходимо перейти<br>
+            в раздел
+            <a class="bold text-info" ui-sref="linkAttestation">
+                <b>"Аттестация"</b>
+            </a>, выбрать одну из текущих<br>
+            аттестаций, а затем перейти к распределению<br>
+            преподавателей по всем дисциплинам текущего<br>
+            семестра, которые ведутся на Вашей кафедре<br>
+            у выбранной группы. Следует отметить, что<br>
+            допустимо независимое сопоставление<br>
+            преподавателя каждому студенту группы.<br>
             <br>
-            <!--настроить списки ("связать" группу или подгруппу с преподавателем по опр. дисциплине),
-            в данном разделе также отображается список студентов (под)группы и (должен будет отображаться)
-            список всех дисциплин с назначенными преподавателями для конкретной (под)группы по выбранной аттестации,
-            дедлайн которой ещё не прошёл.-->
-            Чтобы "связать" группу или подгруппу<br>
-            с преподавателем по определённой<br>
-            дисциплине необходимо перейти в раздел<br>
-            <a class="bold text-info" ui-sref="link">
-                <b>"Настроить списки"</b>
-            </a>
-            .<br>
-            На данной странице есть возможность<br>
-            просмотреть содержимое (под)группы и<br>
-            список всех дисциплин с назначенными<br>
-            преподавателями для конкретной<br>
-            (под)группы по выбранной аттестации.
+            Чтобы добавить преподавателю возможность<br>
+            внесения изменений в сессионные ведомости<br>
+            текущего семестра группы, необходимо перейти<br>
+            в раздел
+            <a class="bold text-info" ui-sref="linkSession">
+                <b>"Сессия"</b>
+            </a>, и на странице распределения<br>
+            преподавателей сопоставить их по каждой дисциплине.<br>
+            Количество назначаемых преподавателей по одному<br>
+            предмету зависит от формы аттестации. В этом разделе<br>
+            также допустимо независимое сопоставление<br>
+            преподавателя каждому студенту группы.<br>
             <br>
         </div>
 
