--- a/src/main/resources/static/Templates/groupsDeputyDean.html
+++ b/src/main/resources/static/Templates/groupsDeputyDean.html
@@ -110,7 +110,7 @@
                                    disabled>
                         </td>
                         <td class="text-center border-info">
-                            <!--<i class="text-warning fa fa-2x fa-exclamation px-2"
+                            <!--<i class="text-danger fa fa-2x fa-exclamation px-2"
                                ng-if="group.active && estimatedCurSemesterNumber[$parentIndex] != group.curSemester"
                                data-toggle="tooltip" data-placement="top"
                                title="Внимание! Установленный семестр не совпадает с (предполагаемым) текущим семестром">
