--- a/src/main/resources/static/Templates/session.html
+++ b/src/main/resources/static/Templates/session.html
@@ -29,7 +29,7 @@
                     <tr>
                         <th class="text-center"></th>
                         <th class="text-center">Номер группы</th>
-                        <th class="text-center">Дисциплина</th>
+                        <th class="text-center w-50">Дисциплина</th>
                         <th class="text-center">Форма аттестации</th>
                         <th class="text-center">Крайний срок внесения изменений
                             <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
@@ -97,7 +97,7 @@
                         <tr>
                             <th class="text-center"></th>
                             <th class="text-center">Номер группы</th>
-                            <th class="text-center">Дисциплина</th>
+                            <th class="text-center w-50">Дисциплина</th>
                             <th class="text-center">Форма аттестации</th>
                             <th class="text-center">Крайний срок внесения изменений
                                 <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
