Предварительные настройки авторизации + мини-фиксы багов

--- a/src/main/resources/static/Templates/arrangeCertification.html
+++ b/src/main/resources/static/Templates/arrangeCertification.html
@@ -42,7 +42,7 @@
                            id="labelDeadline"
                            required>
                     <div class="invalid-tooltip py-0">
-                        Необходимо выбрать дату (мин. значение: {{minDate | date:'dd-MM-yyyy'}})
+                        Необходимо выбрать дату (мин. зн.: {{minDate | date:'dd-MM-yyyy'}})
                     </div>
                 </div>
 
