--- a/src/main/resources/static/Templates/groupsDeanery.html
+++ b/src/main/resources/static/Templates/groupsDeanery.html
@@ -80,7 +80,7 @@
 <!--                            <div class="invalid-tooltip py-0">-->
                             <!-- groupsForm['deadline_' + $index].$dirty &&  -->
                             <div ng-show="groupsForm['deadline_' + $index].$error.min" class="bg-danger text-white p-0">
-                                мин. значение: {{minDate | date:'dd-MM-yyyy'}}
+                                мин. зн.: {{minDate | date:'dd-MM-yyyy'}}
                             </div>
                             <div ng-show="groupsForm['deadline_' + $index].$error.max" class="bg-danger text-white p-0">
                                 макс. значение: {{minDate | date:'dd-MM-2055'}}
