--- a/src/main/resources/static/Templates/contentSession.html
+++ b/src/main/resources/static/Templates/contentSession.html
@@ -40,7 +40,7 @@
                         <th class="text-center">Отчество</th>
                         <th class="text-center">Номер зачётной книжки</th>
                         <th class="text-center" ng-if="splitAttestationForm && splitAttestationForm.id === 1" style="min-width: 8em">Допуск</th>
-                        <th class="text-center" style="min-width: 10px; max-width: 10px">Оценивание</th>
+                        <th class="text-center" style="min-width: 8em">Оценивание</th>
                         <th class="text-center">Последние изменения</th>
                         <th class="text-center ng-hide" ng-show="isHead">Назначенный преподаватель</th>
                     </tr>
