--- a/src/main/resources/static/Templates/attestation.html
+++ b/src/main/resources/static/Templates/attestation.html
@@ -2,12 +2,8 @@
 
     <div class="my-5 card col-md-10 mx-auto border-info p-0">
 
-        <div class="font-weight-bold h4 text-center mt-4">
-            Заполнение аттестационных ведомостей
-            <br>
-            <div class="h5">
-                Найдено действующих аттестаций: <div class="badge bg-aqua-gradient">{{attestations.length}}</div>
-            </div>
+        <div class="font-weight-bold h4 text-center my-4">
+            Список действующих аттестаций
         </div>
 
         <table class="ng-hide table table-hover table-responsive-sm m-0 p-0" ng-show="attestations.length">
