Наконец-то АВТОРИЗАЦИЯ через JWT реализована!!!

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,8 +60,8 @@
                 </div>
             </form>
 
-            <a class="btn btn-link mb-5" href="/oAuth2">
-            <!--<a class="btn btn-info mb-5" href="/login">-->
+<!--            <a class="btn btn-link mb-5" href="/oAuth2">-->
+            <a class="btn btn-info mb-5" href="/login">
                 <i class="fa fa-sign-out"></i>
                 Войти через универсальный аккаунт
             </a>
