--- a/src/main/resources/static/Templates/contentSession.html
+++ b/src/main/resources/static/Templates/contentSession.html
@@ -1,7 +1,7 @@
 <div ng-show="ur == 'TEACHER'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="session">Список дисциплин</a></li>
+        <li class="breadcrumb-item"><a ui-sref="session">Список ведомостей</a></li>
         <li class="breadcrumb-item active" aria-current="page">Редактирование сессионной ведомости</li>
     </ol>
 
