--- a/src/main/resources/static/Templates/session.html
+++ b/src/main/resources/static/Templates/session.html
@@ -4,7 +4,7 @@
         <form class="simple-form" name="sessionDTOForm">
 
             <div class="font-weight-bold h4 text-center my-4">
-                Список дисциплин
+                Список ведомостей
             </div>
             <div class="col-lg-3 col-sm-3 mx-auto mb-4">
                 <ui-select ng-model="group.selected"
@@ -65,7 +65,8 @@
 
             <div class="ng-hide font-weight-bold text-center p-2 alert-warning" ng-show="!groups.length">
                 <!--На данный момент группы, в которых Вы преподаёте, отсутствуют-->
-                На данный момент ведомости, назначенные Вам, отсутствуют
+<!--                На данный момент ведомости, назначенные Вам, отсутствуют-->
+                На данный момент у Вас нет ведомостей этого факультета
             </div>
 
 
