--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -179,7 +179,7 @@
             <a class="navbar-brand" href="#">
                 <img src="Images/logo.svg" width="100" alt="Военмех">
             </a>
-            <p class="mb-1">БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова</p>
+            <p class="mb-1">© 2021 БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова</p>
 
             <ul class="list-inline mb-0 mt-3">
                 <li class="list-inline-item"><a href="https://moodle.voenmeh.ru/login" title="ЭИОС Moodle"><img src="Images/moodle_new.png" alt="Moodle" width="50"></a></li>
