--- a/src/main/resources/static/Templates/subject.html
+++ b/src/main/resources/static/Templates/subject.html
@@ -2,7 +2,7 @@
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a ui-sref="attestation">Список действующих аттестаций</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Список дисциплин</li>
+        <li class="breadcrumb-item active" aria-current="page">Список ведомостей</li>
     </ol>
 
     <!-- Оставить заявку!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
@@ -12,7 +12,7 @@
         <form class="simple-form" name="subjectForm">
 
             <div class="font-weight-bold h4 text-center my-4">
-                Список дисциплин
+                Список ведомостей
             </div>
             <div class="col-lg-3 col-sm-3 mx-auto mb-4">
                 <ui-select ng-model="group.selected"
@@ -65,7 +65,8 @@
 
             <div class="ng-hide font-weight-bold text-center p-2 alert-warning" ng-show="!groups.length">
                 <!--На данный момент группы, в которых Вы преподаёте, отсутствуют-->
-                На данный момент ведомости, назначенные Вам, отсутствуют
+<!--                На данный момент ведомости, назначенные Вам, отсутствуют-->
+                На данный момент у Вас нет ведомостей этого факультета
             </div>
 
 
