--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -161,6 +161,29 @@
             <br>
         </div>
 
+        <!--<hr>
+        <div class="text-center h5 font-weight-bold my-3">
+            Последовательность действий для различных ролей<br>
+            при заполнении аттестационных и сессионных ведомостей:
+        </div>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="Images/attestation.svg" data-holder-rendered="true">
+                </div>
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="Images/session.svg" data-holder-rendered="true">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>-->
         <hr>
         <div class="text-center mb-3">
             Вопросы и пожелания<br>
