Изменение формулировок (вуз и список ведомостей) + информирование при входе

--- a/src/main/resources/static/Templates/attestation.html
+++ b/src/main/resources/static/Templates/attestation.html
@@ -37,7 +37,7 @@
                         <a class="btn btn-info text-white"
                            type="button"
                            ng-click="transitionToSubject(attestation.id)"
-                           title="Перейти к списку дисциплин">
+                           title="Перейти к списку ведомостей">
                             <i class="fa fa-share-square"></i>
                             Перейти
                         </a>
