--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -64,7 +64,7 @@
                 <b>"Группы"</b>
             </a>. В данном разделе<br>
             также имеется возможность отметить студентов,<br>
-            которые были отчислены из ВУЗа или ушли в<br>
+            которые были отчислены из вуза или ушли в<br>
             академ. отпуск. Переход к содержимому группы
             <br>
             осуществляется нажатием на кнопку <b>"К списку<br>
@@ -98,7 +98,7 @@
                 <b>"Группы"</b>
             </a>. В данном разделе<br>
             также имеется возможность отметить студентов,<br>
-            которые были отчислены из ВУЗа или ушли в<br>
+            которые были отчислены из вуза или ушли в<br>
             академ. отпуск. Переход к содержимому группы
             <br>
             осуществляется нажатием на кнопку <b>"К списку<br>
