--- a/src/main/resources/static/Templates/session.html
+++ b/src/main/resources/static/Templates/session.html
@@ -65,8 +65,9 @@
 
             <div class="ng-hide font-weight-bold text-center p-2 alert-warning" ng-show="!groups.length">
                 <!--На данный момент группы, в которых Вы преподаёте, отсутствуют-->
-<!--                На данный момент ведомости, назначенные Вам, отсутствуют-->
-                На данный момент у Вас нет ведомостей этого факультета
+                <!--На данный момент ведомости, назначенные Вам, отсутствуют-->
+                <!--На данный момент у Вас нет ведомостей этого факультета-->
+                На данный момент отсутствуют сессионные ведомости <!--текущей сессии-->
             </div>
 
 
