--- a/src/main/resources/static/Templates/studentsDeanery.html
+++ b/src/main/resources/static/Templates/studentsDeanery.html
@@ -31,7 +31,7 @@
                     <th class="text-center">Имя</th>
                     <th class="text-center">Отчество</th>
                     <th class="text-center">Номер зачётной книжки</th>
-                    <th class="text-center">Отчислен из ВУЗа / <br>Академ. отпуск</th>
+                    <th class="text-center">Отчислен из вуза / <br>Академ. отпуск</th>
 <!--                    <th>Перевод</th>-->
                 </tr>
                 </thead>
