--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -176,7 +176,7 @@
 
     <footer class="py-3 bg-dark">
         <div class="my-2 text-white text-center text-small">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand w-25" href="#">
                 <img src="Images/logo.svg" width="100" alt="Военмех">
             </a>
             <p class="mb-1">© 2021 БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова</p>
